@@ -1,4 +1,6 @@
 5.0a1 -> 5.0a2:
+    - rse: replace still existing u_int32_t with uint32_t to get building under Solaris
+    - rse: remove warnings in rpmdb/dbconfig.c when building an SQLite-only RPM
     - rse: fix building against external Berkeley-DB under Solaris (where -lrt is required)
     - rse: fix distribution tarball by adding the missing misc/librpmmisc.vers
     - jbj: hmmm, tagno's 261 and 269 are fishy, skip tagTypeValidate for now.
